syntax = "proto3";

package bootstrap;

option go_package = "github.com/eleven-am/graft/internal/proto";

service BootstrapService {
    rpc ProposeToken(ProposeTokenRequest) returns (ProposeTokenResponse);
    rpc RequestVote(VoteRequestProto) returns (VoteResponseProto);
    rpc GetClusterMeta(GetClusterMetaRequest) returns (ClusterMetaProto);
    rpc GetFencingEpoch(GetFencingEpochRequest) returns (GetFencingEpochResponse);
    rpc GetLastIndex(GetLastIndexRequest) returns (GetLastIndexResponse);
    rpc NotifyTokenUsage(TokenUsageNotificationProto) returns (NotifyTokenUsageResponse);
    rpc GetTokenUsage(GetTokenUsageRequest) returns (TokenUsageResponseProto);
}

message ProposeTokenRequest {
    uint64 proposed_epoch = 1;
    string proposer_id = 2;
    string proposer_address = 3;
    string voter_set_hash = 4;
    int32 quorum_size = 5;
    int32 mode = 6;
    int64 timestamp = 7;
    bytes signature = 8;
    uint64 expected_epoch = 9;
}

message ProposeTokenResponse {
    uint64 proposed_epoch = 1;
    string voter_id = 2;
    bool accepted = 3;
    uint64 current_epoch = 4;
    string reject_reason = 5;
    int64 timestamp = 6;
    bytes signature = 7;
}

message VoteRequestProto {
    string candidate_id = 1;
    int32 candidate_ordinal = 2;
    string election_reason = 3;
    int64 timestamp = 4;
    bytes voter_set_hash = 5;
    int32 required_quorum = 6;
    bytes signature = 7;
}

message VoteResponseProto {
    bool vote_granted = 1;
    string reason = 2;
    string voter_id = 3;
    bytes voter_set_hash = 4;
    bytes signature = 5;
}

message GetClusterMetaRequest {}

message ClusterMetaProto {
    uint32 version = 1;
    string cluster_uuid = 2;
    string server_id = 3;
    string server_address = 4;
    int32 ordinal = 5;
    int32 state = 6;
    int64 bootstrap_time = 7;
    uint32 checksum = 8;
}

message GetFencingEpochRequest {}

message GetFencingEpochResponse {
    uint64 epoch = 1;
}

message GetLastIndexRequest {}

message GetLastIndexResponse {
    uint64 last_index = 1;
}

message TokenUsageNotificationProto {
    uint32 version = 1;
    string token_hash = 2;
    int64 used_at = 3;
    string used_by = 4;
    uint64 new_epoch = 5;
    int64 timestamp = 6;
    string sender_id = 7;
    string signature = 8;
}

message NotifyTokenUsageResponse {
    bool acknowledged = 1;
}

message GetTokenUsageRequest {
    string token_hash = 1;
}

message TokenUsageResponseProto {
    bool used = 1;
    string used_by = 2;
    int64 used_at = 3;
    string token_hash = 4;
    string responder_id = 5;
    int64 timestamp = 6;
    string signature = 7;
}
